Fixing wrong font awesome equivalences in theme_customization.css

--- a/app/assets/stylesheets/rails_admin/_unicorn_theme_customization.css.scss
+++ b/app/assets/stylesheets/rails_admin/_unicorn_theme_customization.css.scss
@@ -24,10 +24,10 @@
 }
 
 // sidebar icons
-.icon-ambassador:before { content: "\f007"; } // as icon-heart
+.icon-ambassador:before { content: "\f004"; } // as icon-heart
 .icon-assignment:before { content: "\f00c"; } // as icon-ok
 .icon-badge:before { content: "\f02e"; } // as icon-bookmark
-.icon-consul:before { content: "\f0f0"; } // as icon-user
+.icon-consul:before { content: "\f007"; } // as icon-user
 .icon-embassy:before { content: "\f024"; } // as icon-flag
 .icon-mission:before { content: "\f0b1"; } // as icon-briefcase
 .icon-point:before { content: "\f087"; } // as icon-thumbs-up
